kubernetes/jdownloader/01-namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: jdownloader
  labels:
    app.kubernetes.io/name: jdownloader
